welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: error: '=' expected but ';' found.
	var c;
             ^